Added CSS styling to header and body

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <title>React Evernote</title>
   </head>
   <body>
+    <h1 id="logo">
+      <img src="https://user-images.githubusercontent.com/106715328/182713979-c27dc13e-5c18-49a6-835a-0c47cb501f35.png" alt="logo-image" />
+    </h1>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
   </body>
